Commiting recent changes

--- a/notebooks/data_management.ipynb
+++ b/notebooks/data_management.ipynb
@@ -150,7 +150,11 @@
    "source": [
     "## Loading Data\n",
     "\n",
-    "The function used to load the data should take a few strings that determine what types of runs and configuration we want."
+    "The function used to load the data should take a few strings that determine what types of runs and configuration we want. The function should just return an array with a row for each run, and the columns:\n",
+    "\n",
+    "\\[time_since_experiment_start, storage_time, integrated_counts\\]\n",
+    "\n",
+    "for direct shot measurements we can set the storage time to zero."
    ]
   },
   {
@@ -161,13 +165,36 @@
    "source": [
     "config = \"NORM\"\n",
     "run_type = \"shot\"\n",
+    "    \n",
+    "# initialize an empty array\n",
+    "data = np.empty()\n",
     "\n",
-    "# first grab the vector of time bins, which is the same for all our runs\n",
-    "time_bins = np.loadtxt(\"../data_main/12/sorted/T081217_0022_NORM_s020.tof\", usecols = (0))\n",
-    "\n",
+    "# Every file in the directory containing main detector run data is iterated over.\n",
+    "# Here the /sorted directory contains just runs deemed good for analysis.\n",
     "for filename in os.listdir('../data_main/sorted'):\n",
-    "if ((\".tof\" in filename) and (config in filename) and (run_type in filename)):\n",
+    "    \n",
+    "    # Only the files matching our desired configuration and run type are selected\n",
+    "    if ((config in filename) and (run_type in filename)):\n",
+    "        \n",
+    "        # The start time of the run is retrieved from the .txt file\n",
+    "        if ('.txt' in filename):\n",
+    "            \n",
+    "            f = open(filename)  \n",
+    "            lines = f.readlines()\n",
+    "            f.close()\n",
+    "            # grab the epoch time for run start\n",
+    "            date_time = str(day_list[i]).zfill(2) + '.12.2017 ' + lines[26][15:23]\n",
+    "            pattern = '%d.%m.%Y %H:%M:%S'\n",
+    "            run_start_time = int(time.mktime(time.strptime(date_time, pattern)))\n",
+    "        \n",
+    "            # This function returns the start time of the very first run. \n",
+    "            run_start_time = get_first_run_time() - run_start_time\n",
     "\n",
+    "        # The data is retrieved from the .tof file\n",
+    "        if ('.tof' in filename):\n",
+    "            \n",
+    "            \n",
+    "            \n",
     "# iterating through the run list\n",
     "for i in range(0, np.size(run_list)):\n",
     "\n",
@@ -193,27 +220,69 @@
     "    \".tof\", usecols = (1))\n",
     "\n",
     "# get the run times\n",
-    "run_times = get_run_times(run_list, day_list, just_monitor_flag)   \n"
+    "run_times = get_run_times(run_list, day_list, just_monitor_flag)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_bins = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes\n"
+     "ename": "ValueError",
+     "evalue": "all the input array dimensions except for the concatenation axis must match exactly",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-cf3514c01691>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvector\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    281\u001b[0m     \"\"\"\n\u001b[1;32m    282\u001b[0m     \u001b[0m_warn_for_nonsequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 283\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0matleast_2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_m\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtup\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions except for the concatenation axis must match exactly"
      ]
     }
    ],
    "source": [
-    "x = 5\n",
-    "y = 3\n",
-    "if ((x == 5) and (y == 3)):\n",
-    "    print(\"yes\")"
+    "vector = np.zeros((3,1))\n",
+    "data = np.array([])\n",
+    "if (data[0] ):\n",
+    "    \n",
+    "np.vstack((data, vector))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(data)[0]"
    ]
   },
   {
