Started transmission measurements

--- a/notebooks/storage_lifetime.ipynb
+++ b/notebooks/storage_lifetime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,16 @@
     "\n",
     "# importing my model functions for analysis\n",
     "from psi_transmission.model import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import all the data\n",
+    "norm_data_list, jpsu_data_list, jpti_data_list, disk_data_list, gd01_data_list, gd03_data_list, epsu_data_list = load_all_data()"
    ]
   },
   {
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +121,7 @@
     "    # initialize an array to hold the run averages\n",
     "    storage_results = np.zeros((3,3))\n",
     "    \n",
-    "    for i in range(0, len(data_list)):\n",
+    "    for i in range(0, 3):\n",
     "    \n",
     "        # plot all of the runs together\n",
     "        plt.errorbar(data_list[i][:,1], data_list[i][:,2], yerr = data_list[i][:,3], fmt = '.', label = '{} s'.format(data_list[i][0,1]))\n",
@@ -166,20 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load data for different storage times\n",
-    "norm_data_5    = load_data_2('NORM', 's005', normalize_flag = True)\n",
-    "norm_data_20   = load_data_2('NORM', 's020', normalize_flag = True)\n",
-    "norm_data_100  = load_data_2('NORM', 's100', normalize_flag = True)\n",
-    "norm_data_list = [norm_data_5, norm_data_20, norm_data_100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -278,20 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load data for different storage times\n",
-    "jpsu_data_5    = load_data_2('JPSU', 's005', normalize_flag = True)\n",
-    "jpsu_data_20   = load_data_2('JPSU', 's020', normalize_flag = True)\n",
-    "jpsu_data_100  = load_data_2('JPSU', 's100', normalize_flag = True)\n",
-    "jpsu_data_list = [jpsu_data_5, jpsu_data_20, jpsu_data_100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -375,20 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load data for different storage times\n",
-    "jpti_data_5    = load_data_2('JPTI', 's005', normalize_flag = True)\n",
-    "jpti_data_20   = load_data_2('JPTI', 's020', normalize_flag = True)\n",
-    "jpti_data_100  = load_data_2('JPTI', 's100', normalize_flag = True)\n",
-    "jpti_data_list = [jpti_data_5, jpti_data_20, jpti_data_100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -473,20 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load data for different storage times\n",
-    "disk_data_5    = load_data_2('DISK', 's005', normalize_flag = True)\n",
-    "disk_data_20   = load_data_2('DISK', 's020', normalize_flag = True)\n",
-    "disk_data_100  = load_data_2('DISK', 's100', normalize_flag = True)\n",
-    "disk_data_list = [disk_data_5, disk_data_20, disk_data_100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -633,12 +591,6 @@
     }
    ],
    "source": [
-    "# load data for different storage times\n",
-    "gd01_data_5    = load_data_2('GD01', 's005', normalize_flag = True)\n",
-    "gd01_data_20   = load_data_2('GD01', 's020', normalize_flag = True)\n",
-    "gd01_data_100  = load_data_2('GD01', 's100', normalize_flag = True)\n",
-    "gd01_data_list = [gd01_data_5, gd01_data_20, gd01_data_100]\n",
-    "    \n",
     "gd01_storage_results = storage_lifetime(gd01_data_list)"
    ]
   },
@@ -659,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -722,12 +674,6 @@
     }
    ],
    "source": [
-    "# load data for different storage times\n",
-    "gd03_data_5    = load_data_2('GD03', 's005', normalize_flag = True)\n",
-    "gd03_data_20   = load_data_2('GD03', 's020', normalize_flag = True)\n",
-    "gd03_data_100  = load_data_2('GD03', 's100', normalize_flag = True)\n",
-    "gd03_data_list = [gd03_data_5, gd03_data_20, gd03_data_100]\n",
-    "    \n",
     "gd03_storage_results = storage_lifetime(gd03_data_list)"
    ]
   },
@@ -749,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -812,12 +758,6 @@
     }
    ],
    "source": [
-    "# load data for different storage times\n",
-    "epsu_data_5    = load_data_2('EPSU', 's005', normalize_flag = True)\n",
-    "epsu_data_20   = load_data_2('EPSU', 's020', normalize_flag = True)\n",
-    "epsu_data_100  = load_data_2('EPSU', 's100', normalize_flag = True)\n",
-    "epsu_data_list = [epsu_data_5, epsu_data_20, epsu_data_100]\n",
-    "    \n",
     "epsu_storage_results = storage_lifetime(epsu_data_list)"
    ]
   },
@@ -830,13 +770,6 @@
     "- Does it make sense to use every data point (multiple guide configurations) within a single fit for storage lifetime?\n",
     "- Why are the 100 second storage times seemingly off the fit? (or this is just a log scale effect)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
