--- a/notebooks/source_normalization_2.ipynb
+++ b/notebooks/source_normalization_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,13 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1.0\n",
+      "1.8902944501265004\n",
+      "24.223499655093125\n",
+      "0.03343518006305039\n",
       "Fit parameters will be printed in 5, 20, 100, shot order\n",
       "\n",
       "Fit parameters:\n",
@@ -261,6 +265,7 @@
     "    norm_factor = (data_list[0][0,2] / arr[0,2])\n",
     "    arr[:,2] = arr[:,2] * norm_factor\n",
     "    arr[:,3] = arr[:,3] * norm_factor\n",
+    "    print(norm_factor)\n",
     "\n",
     "# converting to days\n",
     "# for arr in data_list:\n",
@@ -300,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
