error analysis on transmission

--- a/notebooks/sD2_surface_degradation.ipynb
+++ b/notebooks/sD2_surface_degradation.ipynb
@@ -268,7 +268,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This doesn't make sense. Following this normalization we would expect the oppposite trend to be seen, namely that direct shot measurements are the most sensitive."
+    "This doesn't make sense. Following this normalization we would expect the oppposite trend to be seen, namely that direct shot measurements are the most sensitive.\n",
+    "\n",
+    "Bernhard's reflections on the normalization plot shown above:\n",
+    "\n",
+    "> concerning your plot, this is interesting as I would have expected the opposite <br/>\n",
+    "we know and have several times measured,, that the build up of the frost on the<br/>\n",
+    "surface<br/>\n",
+    "see Anghel et al   Eur. Phys. J. A (2018) 54: 148<br/>\n",
+    "acts as energy filter - i.e. the longer the source is operated the intensity decreases and<br/>\n",
+    "the intensity decreases stronger for lower energy UCNs<br/>\n",
+    "therefore the longer storage times should be more strongly suppresed<br/>\n",
+    " see Fig. 7 and 8 in the paper .<br/><br/>\n",
+    "In this paper you can also find, that it is not a decay of UCN production we observe but<br/>\n",
+    "an increase in losses due to buildup of frost on the surface- have a look.<br/><br/>\n",
+    "So my first thought would be, that there might be some effect in your analysis,<br/>\n",
+    "with is not yet considered or missing or unknown, which makes this change.<br/>\n",
+    "Might have to do something with monitoring, but I don;t know right away.<br/>\n",
+    "But one should certainly look at that closer.\n",
+    "\n",
+    "The key figure from this paper that should cause some revisitation of the normalization analysis:\n",
+    "\n",
+    "![](../misc/frost_paper_fig.png)\n",
+    "![](jonahberean/psi_transmission/misc/frost_paper_fig.png)\n",
+    "\n",
+    "And from the paper:\n",
+    "\n",
+    ">The West-1 beamport is located about 1.13 m and<br/>\n",
+    "the West-2 beamport 3.23 m above the sD 2 surface. This<br/>\n",
+    "results in a relative shift of the UCN energy spectra at the<br/>\n",
+    "two beamports. UCN which can reach the higher beam-<br/>\n",
+    "port have a minimum energy of 320 neV outside the sD 2<br/>\n",
+    "surface, while UCN at West-1 have a minimum energy of<br/>\n",
+    "113 neV, similar to the kinetic energy boost by the sD 2<br/>\n",
+    "potential [45,46].\n",
+    "\n",
+    "So clearly we're getting this backwards, and the results need to be revisited."
    ]
   },
   {
