Updating notebooks and readmes

--- a/notebooks/sD2_normalization.ipynb
+++ b/notebooks/sD2_normalization.ipynb
@@ -107,6 +107,17 @@
     "![](../img/nominal_configuration.png)\n",
     "![](jonahberean/psi_transmission/img/nominal_configuration.png)\n",
     "\n",
+    "Perhaps also relevant might be some information from Bernhard Lauss on the main cascade detector:\n",
+    "\n",
+    ">3) Cascade counter<br/>\n",
+    "you can find a short description in the Appendix f the <br/>\n",
+    "Doctoral Thesis of Leonard Goeltl - ETH Theses  Nr.  20350<br/>\n",
+    "you can download it from the <br/>\n",
+    "ETH Zuerich Thesis Data base\n",
+    "\n",
+    ">otherwise check the website of the producer<br/>\n",
+    "C-DT Heidelberg.  cdt.com\n",
+    "\n",
     "In this section, only the runs carried out in this configuration are used. Transmission ratios were found by Edgard to be ~0.5-0.9 for the various guides, and these measurements would need to be used in a re-normalization of the absolute counts before any comparison with nominal configuration runs."
    ]
   },
@@ -420,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
