--- a/notebooks/monitor_detector.ipynb
+++ b/notebooks/monitor_detector.ipynb
@@ -29,6 +29,8 @@
     "import ipynb\n",
     "import decimal\n",
     "import time\n",
+    "import uncertainties\n",
+    "from uncertainties import *\n",
     "import numpy as np\n",
     "from scipy.optimize import curve_fit\n",
     "logging.basicConfig(level=logging.INFO, stream=sys.stdout)\n",
@@ -57,7 +59,7 @@
     "# loading the data sets\n",
     "\n",
     "# main detector\n",
-    "main_dict = load_all_main()"
+    "data_dict, norm_dict = load_all_main()"
    ]
   },
   {
